# 4WheelRobot

Arduino/: 4wheelrobot.ino
Arduino/4wheelrobot/: 4wheelrobot.ino
ros/src/magrobot/magrobot_groundstation/: CMakeLists.txt  package.xml
ros/src/magrobot/magrobot_groundstation/config/: costmap.yaml
ros/src/magrobot/magrobot_groundstation/launch/: exploration.launch  groundStation.launch
ros/src/magrobot/magrobot_groundstation/rviz/: explore.rviz  slam.rviz
ros/src/magrobot/magrobot_groundstation/src/: joy2twist.cpp
ros/src/magrobot/magrobot_platform/: CMakeLists.txt  package.xml
ros/src/magrobot/magrobot_platform/launch/: exploration.launch  platform.launch
ros/src/magrobot/magrobot_platform/model/: Robot.stl
ros/src/magrobot/magrobot_platform/src/: main.cpp
ros/src/magrobot/model_publisher/nodes/: model_publisher.cpp
